force-app/main/default/objects/Lead_Staging_Error_Log__c/Lead_Staging_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Lead Staging Error Log</label>
    <nameField>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Staging Error Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>