force-app/main/default/objects/Lead_Staging_Error_Log__c/fields/Are_Future_Errors_Prevented__c.field-meta.xml
<CustomField>
    <fullName>Are_Future_Errors_Prevented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Future Errors Prevented?</label>
    <type>Checkbox</type>
</CustomField>