force-app/main/default/objects/Lead_Staging_Error_Log__c/fields/Error_Status__c.field-meta.xml
<CustomField>
    <fullName>Error_Status__c</fullName>
    <label>Error Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unresolved</fullName>
                <default>true</default>
                <label>Unresolved</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>