force-app/main/default/objects/Lead_Staging_Error_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invalid Email</fullName>
            </value>
            <value>
                <fullName>Invalid Phone Number</fullName>
            </value>
            <value>
                <fullName>Missing Required Field</fullName>
            </value>
            <value>
                <fullName>Validation Failure</fullName>
            </value>
            <value>
                <fullName>Duplicate Record Detected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>