force-app/main/default/objects/Lead_Staging_Error_Log__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Specifies which field (e.g., Phone, Email) caused the error.</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>