force-app/main/default/objects/Lead_Staging_Error_Log__c/fields/Is_Individual_Error_Coorected__c.field-meta.xml
<CustomField>
    <fullName>Is_Individual_Error_Coorected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Individual Error Coorected?</label>
    <type>Checkbox</type>
</CustomField>