force-app/main/default/objects/Lead_Staging_Error_Log__c/fields/Lead_Staging_Record__c.field-meta.xml
<CustomField>
    <fullName>Lead_Staging_Record__c</fullName>
    <label>Lead Staging Record</label>
    <referenceTo>Lead_Staging_Record__c</referenceTo>
    <relationshipLabel>Lead Staging Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>