force-app/main/default/objects/Lead_Staging_Error_Log__c/fields/System_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>System_Error_Message__c</fullName>
    <label>System Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>